--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta http-equiv="refresh" content="15">
     <title>Mi Primera Página Web</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+      #mi_presentacion1{
+        border: 1px solid rgb(4, 179, 4);
+        border-radius: 30px;
+      }
+      #mi_presentacion1{
+        border: 1px solid rgb(3, 170, 200);
+        border-radius: 30px;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -12,7 +22,8 @@
     <main>
       <section id="intro">
         <h2>Control del mouse</h2>
-        <p>Esta es mi pagina web, con etiquetas, enlaces, menu, interaccion javaScript, encabezado y pie de pagina...</p>
+        <p id="mi_presentacion1">Esta es mi pagina web, con etiquetas, enlaces, menu, interaccion javaScript, encabezado y pie de pagina...</p>
+        <p id="mi_presentacion2">Esta es mi pagina web, con etiquetas, enlaces, menu, interaccion javaScript, encabezado y pie de pagina...</p>
         <button id="changeTextButton">Haz clic para cambiar el texto</button>
       </section>
     </main>
