Feature: Se mejora la presentación de los parrafos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Mi Primera Página Web</title>
     <link rel="stylesheet" href="style.css">
     <style>
+      .espacio-contenido{
+        border-radius: 15px;
+        padding: 20px 5px;        
+      }
       #mi_presentacion1{
         border: 1px solid rgb(4, 179, 4);
         border-radius: 30px;
@@ -25,7 +29,7 @@
     <main>
       <section id="intro">
         <h2>Control del mouse</h2>
-        <p id="mi_presentacion1">
+        <p class="espacio-contenido" id="mi_presentacion1">
           Esta es mi pagina web, con etiquetas, <s>enlaces</s>, menu, <mark>interaccion javaScript</mark>, encabezado y pie de pagina y <i>más...</i>
         </p>
         <p id="mi_presentacion2">
