--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         border: 1px solid rgb(3, 170, 200);
         border-radius: 30px;
       }
-      #custon{
+      #color-texto{
         color: red;
       }
     </style>
