Fix: Se arregla estilo sobre el parrafo 2 se la sección

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="espacio-contenido" id="mi_presentacion1">
           Esta es mi pagina web, con etiquetas, <s>enlaces</s>, menu, <mark>interaccion javaScript</mark>, encabezado y pie de pagina y <i>más...</i>
         </p>
-        <p id="mi_presentacion2">
+        <p class="espacio-contenido" id="mi_presentacion2">
           <span id="color-texto">Esta es mi pagina web, con etiquetas, enlaces, menu, interaccion javaScript, encabezado y pie de pagina...</span>
         </p>
         <button id="changeTextButton">Haz clic para cambiar el texto</button>
